<resources>
    <string name="cmuc_app_name">统一智能终端</string>
    <string name="crm_app_name">中国移动手机营业厅</string>
    <string name="esop_app_name">中国移动ESOP客户端</string>
    <string name="yxzs_app_name">中国移动营销助手</string>
    <string name="app_copyright">中国移动通信集团四川有限公司</string>
    <string name="china_mobile">中国移动通信集团四川有限公司</string>
    <string name="china_mobile_en">CHINA MOBILE GROUP SICHUAN CO.,LTD</string>
    <string name="splash_crm_app_name">中国移动手机营业厅</string>
    <string name="splash_cmuc_app_name">中国移动统一智能终端</string>
    <string name="splash_esop_app_name">中国移动ESOP系统</string>
    <string name="splash_yxzs_app_name">中国移动营销助手</string>
    <string name="re_try">重试</string>
    <string name="server_error">服务器错误</string>
     <string name="set_network">设置网络</string>
     <string name="network_error">网络错误，请检查网络设置。错误ID=40</string>
     <string name="frame_loading_fail">数据加载失败，\n请检查当前网络接连或稍后再试!</string>
     <string name="load_web_fail">页面加载失败，\n请检查当前网络接连或稍后再试!</string>
     <string name="sd_card_error">sd卡不可用，请插入sd卡</string>
    <string name="set_device_visible">设置蓝牙可见</string>
    <string name="set_visible_time">设置可见时间：</string>
    <string name="second">秒</string>
    <string name="have_no_bluetooth">该设备没有蓝牙</string>
    <string name="device_list">设备列表</string>
    <string name="search_device">搜索蓝牙设备</string>
     <string name="research_device">重新搜索蓝牙设备</string>
     <string name="none_bound">未配对</string>
     <string name="bounded">已配对但未连接</string>
     <string name="bounding">正在配对</string>
     <string name="open_bluetooth">打开蓝牙</string>
     <string name="open_bluetooth_failed">打开蓝牙失败</string>
     <string name="if_open_blue_tooth">蓝牙未打开，是否打开？</string>
     <string name="searching_bluedevice">正在搜索蓝牙设备，请稍后。。。</string>
     <string name="bluetooth_pair">配对</string>
     <string name="send_file">发送文件</string>
     <string name="cancle_pair">取消配对</string>
     <string name="pair_bluetooth_failed">配对蓝牙失败</string>
     <string name="select_file">选择文件</string>
     <string name="send_file_indractor">发送文件:</string>
     <string name="please_select_file">请选择要发送的文件</string>
     <string name="bluetooth_search_hint">按设备名搜索</string>
    <string name="menu">菜单</string>
    <string name="exit">退出</string>
    <string name="userexit">用户退出</string>
    <string name="confirmexit">您确定退出吗？</string>
    <string name="delcache">删除缓存吗?</string>
    <string name="user_exit_yes">决意退出</string>
    <string name="user_exit_no">容我三思</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="top_back">返回</string>
    <string name="delete">删除</string>
    <string name="continu">继续</string>
    <string name="next_step">下一步</string>
    <string name="retry_password">请重试！</string>
    <string name="re_login">重新登录</string>
    <string name="search">搜索</string>
    <string name="search_key_word">请输入要搜索的业务名称</string>
    <string name="key_work_is_null">请输入要搜索的业务！</string>
    <string name="searching">正在为您搜索业务，请稍后。。。</string>
    <string name="search_reslult">搜索结果：</string>
    <string name="no_search">您搜索的业务不存在</string>
    <string name="play_video">使用以下内容完成操作</string>
    <string name="video_complete">播放完毕，谢谢观看</string>
    <string name="checking_application_update">正在检查版本更新。。。</string>
    <string name="checking_support_device_update">正在检查具有外设功能的版本。。。</string>
    <string name="checking_common_res_update">正在检查公共资源更新。。。</string>
    <string name="downing_common_res">正在下载公共资源。。。</string>
    <string name="importing_common_res">正在导入公共资源。。。</string>
    <string name="logining">正在登录 。。。</string>
    <string name="getting_data">正在获取数据。。。</string>
    <string name="completed">已完成。。。</string>
    <string name="unzip_web">下载完成，正在解析。。。</string>
    <string name="load_web">解析完成，页面加载中。。。</string>
    <string name="background_donwn_apk">后台下载</string>
    <string name="down_apk_progress">下载进度</string>
    <string name="down_apk_failed">下载失败，请重试</string>
    <string name="user_login">用户登录</string>
    <string name="user_name_label">用户名</string>
    <string name="password_label">密码</string>
    <string name="auth_code">验&#160;证&#160;码：</string>
    <string name="login">登&#160;录</string>
    <string name="back">返回</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="login_auth_code_is_null">请输入验证码!</string>
    <string name="getting_dynamiccode">正在获取</string>
    <string name="send_dynamiccode_request">验证码请求已发送，请等待验证短信下发！</string>
    <string name="get_dynamiccode_faild">获取验证码失败，请重试！</string>
    <string name="busy_click_dyaniccode_button">您已点击获取短信验证码，如果您在15秒内任未收到短信，您可以重新点击“获取验证码”！</string>
    <string name="reset">重置</string>
    <string name="user_no">用户号码：</string>
	<string name="service_password">服务密码：</string>
	<string name="login_id_is_null">请输入登录账号!</string>
	<string name="login_password_is_null">请输入登录密码!</string>
	<string name="login_password_length_not_enough">请输入6-20位的密码!</string>
	<string name="login_failure_info">登录失败,请重试!</string>
	<string name="input_length_prompt">输入长度不能超过 %1$d 位</string>
	<string name="delete_cache_title">删除缓存</string>
	<string name="delete_cache_msg">删除中...</string>
	<string name="clear_cache">清除缓存</string>
	<string name="update_skin">正在更新皮肤，请稍后</string>
	<string name="skin_set">皮肤设置</string>
	<string name="update_version_title">版本更新</string>
	<string name="update_version_info">检测到新版本是否更新？</string>
	<string name="downing_apk">正在下载新版本，请稍后。。。</string>
	<string name="force_downing_apk">正在下载新版本，需要成功安装新版本，才能进入移动智能终端</string>
	<string name="latest_version">当前版本已经是最新版本！</string>
	<string name="down_apk_toast">正在后台下载最新版本，您可在通知栏查看下载进度。</string>
	<string name="down_support_device_apk_toast">正在后台下载具有外设功能的最新版本，您可在通知栏查看下载进度。</string>
	<string name="add_support_device">添加外设</string>
	<string name="add_support_device_info">当前版本没有外设功能，是否需要添加外设？</string>
	<string name="dialog_default_title">警告</string>
	<string name="need_authorities">需要登录才能访问此功能</string>
    <string name="menu_setting">设置</string>
    <string name="menu_browser">打开浏览器</string>
    <string name="menu_switch_user">切换用户</string>
    <string name="switch_user_question">您确定切换用户吗？</string>
    <string name="menu_close_system">退出</string>
    <string name="menu_bluetooth_adapter">蓝牙适配</string>
    <string name="clear_cach_success">清除成功</string>
    <string name="home">首页</string>
    <string name="collection">我的工作台</string>
    <string name="message">消息列表</string>
    <string name="more">更多</string>
   	<string name="new_message"> 条新信息</string>
	<string name="deleting_message">正在删除信息，请稍后</string>
	<string name="manage_message">信息管理</string>
	<string name="delete_selected_message">删除信息</string>
    <string name="delete_all_messages">清空信息</string>
    <string name="delete_selected_message_scuess">删除信息成功</string>
    <string name="delete_all_messages_scuess">清空信息成功</string>
    <string name="message_detail">消息详情</string>
    <string name="commit">提交</string>
    <string name="open_web">打开网页</string>
    <string name="do_business">办理业务</string>
    <string name="input_feedBack">请输入反馈内容：</string>
    <string name="commit_feedback_scuess">提交反馈成功</string>
    <string name="commit_feedback_failed">提交反馈失败</string>
    <string name="no_input_feedback_text">请输入反馈内容</string>
    <string name="menu_list_is_null">没有请求的菜单列表</string>
    <string name="my_feedback">我提交的反馈</string>
    <string name="my_feedback_list">我的反馈</string>
    <string name="feedback_hint">请留下您的宝贵意见和建议</string>
    <string name="getting_feedback">正在获取反馈</string>
    <string name="refresh">刷新</string>
    <string name="refreshing">正在刷新反馈</string>
    <string name="feedback">反馈：</string>
    <string name="reply">回复：</string>
    <string name="replyed">已回复</string>
    <string name="unreply">未回复</string>
    <string name="feedback_isempty">请填写反馈内容</string>
    <string name="commiting_feedback">正在提交反馈，请稍后。。。</string>
    <string name="commit_failed">反馈提交失败，稍后重试</string>
    <string name="refresh_feedbacks_failed">获取反馈失败，稍后重试</string>
    <string name="exit_feedback">反馈问题</string>
    <string name="collection_business_question">您确定添加此业务到工作台吗？</string>
    <string name="update_collection_business_question">业务已经添加到工作，您确定覆盖吗？</string>
    <string name="delete_collection_business">移除业务</string>
    <string name="delete_collection_business_question">您确定移除此业务吗？</string>
    <string name="token_time_out">令牌失效</string>
    <string name="token_time_out_question">确定重新登录，获取令牌吗？</string>
      <string name="screen_direction">屏幕方向</string>
      <string name="secure_password">锁屏密码</string>
      <string name="modify_secure_password">修改锁屏密码</string>
      <string name="set_secure_password">设置锁屏密码</string>
      <string name="select_your_password">选择您的锁屏密码</string>
      <string name="first_set_password">首次登录请设置一个锁屏密码</string>
      <string name="secure_password_length">密码必须至少包含4个字符</string>
      <string name="secure_password_contain_chart">密码中至少包含一个字母</string>
      <string name="secure_password_contain_empty">密码包含非法字符</string>
      <string name="complete_input_secure_password">完成后触摸“继续”</string>
      <string name="confirm_secure_password">确认您的锁屏密码</string>
      <string name="secure_password_dont_match">您的锁屏密码不匹配</string>
      <string name="secure_optional">应用锁定</string>
      <string name="hidden_lock">最小化时锁定应用</string>
      <string name="screen_off_lock">待机时锁定应用</string>
      <string name="after_start_lock">启动后锁定</string>
      <string name="input_your_secure_password">输入您的锁屏密码</string>
      <string name="sorry_retry">很抱歉，请重试！错误超过5次，将重新登录。</string>
      <string name="last_input_time">剩余次数:</string>
      <string name="no_lock">不锁定应用</string>
      <string name="sync">同步</string>
      <string name="syncing">正在为您同步工作台，请稍后。。。</string>
      <string name="can_not_collcetion">正在同步工作台，现在不能收藏</string>
      <string name="check_version_update">版本更新</string>
      <string name="bind_phone_imsi">绑定本机标识</string>
      <string name="what_is_secure_password">什么是锁屏密码？</string>
      <string name="input_4a_accounts_for_binding">请输入要在本机使用的4A帐号：</string>
      <string name="use_char__seperate_accounts">多个帐号可以用英文逗号隔开</string>
      <string name="request_binding">申请绑定</string>
      <string name="what_is_imei">什么是本机标识？</string>
      <string name="requesting_bind">正在申请绑定</string>
      <string name="send_request_bind_success">绑定申请已发送至服务器</string>
       <string name="send_request_bind_fail">申请发送失败</string>
      <string name="alert_bind_phone_imsi">检测到本机尚未绑定</string>
      <string name="phone_imsi">手机标识：</string>
      <string name="why_to_bind">为什么要进行绑定工作</string>
      <string name="commit_binding">提交绑定</string>
      <string name="bind_help">
          	&#160;&#160;&#160;&#160;&#160;&#160;基于安全需要，需要在使用本客户端应用的终端必须先在系统中与4A帐号进行绑定，否则不能使用。\n\n
          	&#160;&#160;&#160;&#160;&#160;&#160;绑定时需要提供本机标识及4A帐号,输入要进行绑定的4A账号后点提交绑定按钮，应用会把本机标识发送到后台,然后请通知地市管理员或Q群“智能机运营系统(42817316)”上从兴电子公司的技术人员进行审核
       </string>
       <string name="answer_imei">
           &#160;&#160;&#160;&#160;&#160;&#160;基于安全需要，需要在使用本客户端应用的终端必须先在系统中与4A帐号进行绑定，否则不能使用.\n\n
           &#160;&#160;&#160;&#160;&#160;&#160;绑定时需要提供本机标识及4A帐号，发给管理员或发在Q群“智能机运营系统”上。\n\n
           &#160;&#160;&#160;&#160;&#160;&#160;为方便录入，可在登录界面右下角点击申请绑定，然后在弹出的本机标识绑定界面输入要绑定的4A帐号，点提交绑定按钮，应用会把本机标识发送到后台。然后请管理员或Q群“智能机运营系统”上从兴电子公司的技术人员进行审核。
       </string>
      <string name="handle_exception">很抱歉,程序错误,异常提交完成后，将退出</string>
      <string name="downloading_apk">后台正在下载最新安装程序，请稍后再试</string>
      <string name="downloading_support_device_apk">后台正在下载支持外设功能安装程序，请稍后再试</string>
      <string name="apk_download_success">最新安装程序下载成功,点击安装。</string>
      <string name="bookmark_name">名称</string>
      <string name="book_url">地址</string>
      <string name="function_guide">功能介绍</string>
      <string name="business_guide">新业务介绍</string>
      <string name="opre_guide">使用指引</string>
      <string name="friend_share">好友分享</string>
      <string name="scan_qr_code">扫描二维码，您的朋友也可以下载客户端</string>
      <string name="msg_share">短信分享</string>
      <string name="other_share">二维码分享</string>
</resources>