<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/common_bg"
    android:orientation="vertical"
    android:gravity="center_horizontal"
     >

    <include layout="@layout/top_title" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="4dip">
    <LinearLayout
        android:id="@+id/EsopSettingItem"
        style="@style/EsopSettingItem"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/skin_setting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="center_horizontal" 
            android:visibility="gone">

            <TextView
                android:id="@+id/skin_setting_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skin_set"
                android:textColor="@color/list_item_1"
                android:textSize="18.0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/screen_direction_split"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:background="@color/gray"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/clear_cach"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/clear_cache_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_cache"
                android:textColor="@color/list_item_1"
                android:textSize="18.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/read_feedback"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/read_feedback_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_feedback_list"
                android:textColor="@color/list_item_1"
                android:textSize="18.0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/screen_direction_split_1"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/screen_direction"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/screen_direction_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/screen_direction"
                android:textColor="@color/list_item_1"
                android:textSize="18.0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/screen_direction_split_2"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/secure_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/secure_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secure_password"
                android:textColor="@color/list_item_1"
                android:textSize="18.0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/support_device_split"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:background="@color/gray"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/add_support_device"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_support_device"
                android:textColor="@color/list_item_1"
                android:textSize="18.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/function_guide_panel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/function_guide"
                android:textColor="@color/list_item_1"
                android:textSize="18.0sp" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/business_guide_panel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business_guide"
                android:textColor="@color/list_item_1"
                android:textSize="18.0sp" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/opre_guide_panel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opre_guide"
                android:textColor="@color/list_item_1"
                android:textSize="18.0sp" />
        </LinearLayout>
        
         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/share_panel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friend_share"
                android:textColor="@color/list_item_1"
                android:textSize="18.0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/screen_direction_split_3"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/version_update"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_version_update"
                android:textColor="@color/list_item_1"
                android:textSize="18.0sp" />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>

</LinearLayout>