<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical" >
    <include
        layout="@layout/dialog_title_bar" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="10dip" >

        <TextView
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:clickable="true"
            android:text="@string/what_is_secure_password"
            android:textColor="#ff006aca" />

        <TextView
            android:id="@+id/password_input_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:paddingBottom="10dp"
            android:text="@string/first_set_password"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/secure_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_weight="1"
            android:background="@drawable/login_input"
            android:completionThreshold="1"
            android:drawableRight="@drawable/password_icon"
            android:gravity="left|center"
            android:padding="8dip"
            android:hint="@string/secure_password"
            android:password="true"
            android:saveEnabled="true"
            android:singleLine="true"
            android:textColor="@color/login_text"
            android:textSize="@dimen/login_box_row_text_size" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/certain_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/login_input"
            android:completionThreshold="1"
            android:drawableRight="@drawable/password_icon"
            android:gravity="left|center"
            android:hint="@string/confirm_secure_password"
            android:padding="8dip"
            android:password="true"
            android:saveEnabled="true"
            android:singleLine="true"
            android:textColor="@color/login_text"
            android:textSize="@dimen/login_box_row_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="10dp"
            android:background="#44444444" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#44aaaaaa" />

        <Button
            android:id="@+id/btnOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/green_button_bg"
            android:text="@string/confirm"
            android:textColor="#444444"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>