<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_bg"
    android:orientation="vertical" >

    <include
        layout="@layout/top_title" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dip" >

        <com.starcpt.cmuc.ui.view.BubbleEditText
            android:id="@+id/search_key_word"
            android:layout_width="wrap_content"
            android:layout_height="35dip"
            android:layout_weight="1.0"
            android:background="@drawable/bg_searchbox"
            android:hint="@string/search_key_word"
            android:textColor="@color/black" />

        <ImageButton
            android:id="@+id/serach_business_button"
            android:layout_width="35dip"
            android:layout_height="35dip"
            android:layout_marginLeft="10dip"
            android:background="@drawable/search_button_no_text_bg" />
    </LinearLayout>

    <TextView
        android:id="@+id/search_reslut_label"
        android:layout_marginLeft="5dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_reslult" 
        android:textColor="@color/black"
        android:visibility="gone"
        android:textSize="18sp"
        />
     <TextView
        android:id="@+id/search_no_reslut"
        android:layout_marginTop="5dip"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/no_search" />

    <ListView
        android:id="@id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dip"
        android:cacheColorHint="#00000000"
        android:divider="@drawable/list_divider"
        android:fadeScrollbars="true"
        android:fadingEdge="none"
        android:fadingEdgeLength="0.0dip"
        android:fastScrollEnabled="true"
        android:listSelector="@drawable/chat_history_selector"
        android:scrollbarStyle="insideInset"
        android:stackFromBottom="false"
        android:transcriptMode="alwaysScroll" />

</LinearLayout>